[gd_scene load_steps=4 format=3 uid="uid://y367tfhui5xy"]

[ext_resource type="Texture2D" uid="uid://c5ujajly4gvmt" path="res://Weapon/Scythe/scythe.png" id="1_2ru6w"]
[ext_resource type="Script" path="res://Level Progression/upgrade_card.gd" id="1_d0ikj"]
[ext_resource type="Theme" uid="uid://r8ouwhij628m" path="res://UI/Themes/upgrade_card.tres" id="2_6gpq1"]

[node name="UpgradeCard" type="Button"]
process_mode = 2
custom_minimum_size = Vector2(400, 120)
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
script = ExtResource("1_d0ikj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer2"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("1_2ru6w")
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_6gpq1")
text = "Javelin Damage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueLabel" type="Label" parent="MarginContainer/HBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_6gpq1")
text = "+50"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
